# cMA-ETP-Toronto

./: Install-ParadiseEO.txt  README_FREE_SOFTWARE_LICENCE.txt  cmd_line.txt
ETTP-Benchmarks/ExamEvaluate/: EventList.h  ExamEvaluate.cpp  ExamEvaluate.dsw  StdAfx.cpp  StdAfx.h  StudentList.cpp  StudentList.h  Timetabling.cpp  Timetabling.h
ETTP-Benchmarks/ExamEvaluate/ExamEvaluate/: ExamEvaluate.pro  ExamEvaluate.pro.user.b00357e.2.7pre1
ETTP-Benchmarks/ExamEvaluate/build-ExamEvaluate-Desktop-Debug/: ExamEvaluate  Makefile
ETTP-Benchmarks/Toronto/: readme.txt  update.txt
Runs and Statistics/AlgRanking_NIS_11_AVG/: AlgRanking_NIS_11_AVG.csv  output.aux  output.tex  readme.txt
Runs and Statistics/AlgRanking_NIS_11_MIN/: AlgRanking_NIS_11_MIN.csv  output.aux  output.tex  readme.txt  readme.txt~
Runs and Statistics/AlgRanking_NIS_13_AVG/: AlgRanking_NIS_13_AVG.csv  output.aux  output.tex  readme.txt
Runs and Statistics/AlgRanking_NIS_13_MIN/: AlgRanking_NIS_13_MIN.csv  output.aux  output.tex
Runs and Statistics/RUNS_rate_1EMinus6/Run1/: car-f-92.sol  car-s-91.sol  ear-f-83.sol  hec-s-92.sol  kfu-s-93.sol  lse-f-91.sol  pur-s-93.sol  rye-s-93.sol  sta-f-83.sol  tre-s-92.sol  uta-s-92.sol  ute-s-92.sol  yor-f-83.sol
Runs and Statistics/RUNS_rate_1EMinus6/Run10/: car-f-92.sol  car-s-91.sol  ear-f-83.sol  hec-s-92.sol  kfu-s-93.sol  lse-f-91.sol  pur-s-93.sol  rye-s-93.sol  sta-f-83.sol  tre-s-92.sol  uta-s-92.sol  ute-s-92.sol  yor-f-83.sol
Runs and Statistics/RUNS_rate_1EMinus6/Run2/: car-f-92.sol  car-s-91.sol  ear-f-83.sol  hec-s-92.sol  kfu-s-93.sol  lse-f-91.sol  pur-s-93.sol  rye-s-93.sol  sta-f-83.sol  tre-s-92.sol  uta-s-92.sol  ute-s-92.sol  yor-f-83.sol
Runs and Statistics/RUNS_rate_1EMinus6/Run3/: car-f-92.sol  car-s-91.sol  ear-f-83.sol  hec-s-92.sol  kfu-s-93.sol  lse-f-91.sol  pur-s-93.sol  rye-s-93.sol  sta-f-83.sol  tre-s-92.sol  uta-s-92.sol  ute-s-92.sol  yor-f-83.sol
Runs and Statistics/RUNS_rate_1EMinus6/Run4/: car-f-92.sol  car-s-91.sol  ear-f-83.sol  hec-s-92.sol  kfu-s-93.sol  lse-f-91.sol  pur-s-93.sol  rye-s-93.sol  sta-f-83.sol  tre-s-92.sol  uta-s-92.sol  ute-s-92.sol  yor-f-83.sol
Runs and Statistics/RUNS_rate_1EMinus6/Run5/: car-f-92.sol  car-s-91.sol  ear-f-83.sol  hec-s-92.sol  kfu-s-93.sol  lse-f-91.sol  pur-s-93.sol  rye-s-93.sol  sta-f-83.sol  tre-s-92.sol  uta-s-92.sol  ute-s-92.sol  yor-f-83.sol
Runs and Statistics/RUNS_rate_1EMinus6/Run6/: car-f-92.sol  car-s-91.sol  ear-f-83.sol  hec-s-92.sol  kfu-s-93.sol  lse-f-91.sol  pur-s-93.sol  rye-s-93.sol  sta-f-83.sol  tre-s-92.sol  uta-s-92.sol  ute-s-92.sol  yor-f-83.sol
Runs and Statistics/RUNS_rate_1EMinus6/Run7/: car-f-92.sol  car-s-91.sol  ear-f-83.sol  hec-s-92.sol  kfu-s-93.sol  lse-f-91.sol  pur-s-93.sol  rye-s-93.sol  sta-f-83.sol  tre-s-92.sol  uta-s-92.sol  ute-s-92.sol  yor-f-83.sol
Runs and Statistics/RUNS_rate_1EMinus6/Run8/: car-f-92.sol  car-s-91.sol  ear-f-83.sol  hec-s-92.sol  kfu-s-93.sol  lse-f-91.sol  pur-s-93.sol  rye-s-93.sol  sta-f-83.sol  tre-s-92.sol  uta-s-92.sol  ute-s-92.sol  yor-f-83.sol
Runs and Statistics/RUNS_rate_1EMinus6/Run9/: car-f-92.sol  car-s-91.sol  ear-f-83.sol  hec-s-92.sol  kfu-s-93.sol  lse-f-91.sol  pur-s-93.sol  rye-s-93.sol  sta-f-83.sol  tre-s-92.sol  uta-s-92.sol  ute-s-92.sol  yor-f-83.sol
build-so-Toronto-Desktop-Default/: CMakeCache.txt  Makefile  SO-Toronto.cbp  cmake_install.cmake
build-so-Toronto-Desktop-Default/exes/: Makefile  cmake_install.cmake  exes  exes.cbp
build-so-Toronto-Desktop-Default/lib/: Makefile  SOlib.cbp  cmake_install.cmake
build-so-Toronto-Desktop-Default/lib/algorithms/: Makefile  cmake_install.cmake
build-so-Toronto-Desktop-Default/lib/chromosome/: Makefile  cmake_install.cmake
build-so-Toronto-Desktop-Default/lib/containers/: Makefile  cmake_install.cmake
build-so-Toronto-Desktop-Default/lib/data/: Makefile  cmake_install.cmake
build-so-Toronto-Desktop-Default/lib/eval/: Makefile  cmake_install.cmake
so-Toronto/: CMakeLists.txt
so-Toronto/exes/: CMakeLists.txt  TestSO.cpp
so-Toronto/lib/: CMakeLists.txt  MainApp.cpp
so-Toronto/lib/algorithms/: CMakeLists.txt~
so-Toronto/lib/algorithms/eo/: Crossover.h  Mutation.h  eoAlgoPointer.h  eoCellularEA.h  eoCellularEAMatrix.h  eoCellularEARing.h  eoDeterministicTournamentSelectorPointer.h  eoGenerationContinue.h  eoGenerationContinuePopVector.h  eoSelectBestOne.h
so-Toronto/lib/algorithms/mo/: moSimpleCoolingSchedule.h  moTA.h  moTAexplorer.h
so-Toronto/lib/algorithms/mo/statistics/: moTAWithStatistics.h  moTAexplorerWithStatistics.h
so-Toronto/lib/chromosome/: eoChromosome.cpp  eoChromosome.h
so-Toronto/lib/containers/: ColumnMatrix.h  IntMatrix.h  Matrix.h  TimetableContainer.h  TimetableContainerMatrix.cpp  TimetableContainerMatrix.h  VertexPriorityQueue.cpp  VertexPriorityQueue.h
so-Toronto/lib/data/: Data.h  Exam.h  Period.h  TimetableProblemData.cpp  TimetableProblemData.hpp
so-Toronto/lib/eval/: eoETTPEval.h  eoNumberEvalsCounter.h
so-Toronto/lib/eval/statistics/: eoETTPEvalWithStatistics.h
so-Toronto/lib/examEvaluator/: EventList.cpp  ExamEvaluate.cpp  StdAfx.cpp  Timetabling.cpp  Timetabling.h
so-Toronto/lib/graphColouring/: GraphColouringHeuristics.h
so-Toronto/lib/init/: ETTPInit.h
so-Toronto/lib/kempeChain/: ETTPKempeChain.h  ETTPKempeChainHeuristic.h
so-Toronto/lib/kempeChain/statistics/: ETTPKempeChainHeuristicWithStatistics.h
so-Toronto/lib/neighbourhood/: ETTPNeighborhoodExplorer.h  ETTPneighbor.h  ETTPneighborEval.h  ETTPneighborhood.h
so-Toronto/lib/neighbourhood/statistics/: ETTPneighborEvalNumEvalsCounter.h  ETTPneighborEvalWithStatistics.h  ETTPneighborWithStatistics.h  ETTPneighborhoodWithStatistics.h
so-Toronto/lib/statistics/: ExamInfo.cpp  ExamInfo.h  ExamMoveStatistics.cpp  ExamMoveStatistics.h  MovedExam.h
so-Toronto/lib/testset/: TestSet.h  TestSetDescription.cpp  TestSetDescription.h
so-Toronto/lib/toronto/: MainAppTorontoDatasets.cpp  TorontoTestSet.cpp  TorontoTestSet.h
so-Toronto/lib/utils/: Common.cpp  Common.h  CurrentDateTime.cpp  CurrentDateTime.h  Utils.cpp
(+12 files in other folders)
